# video-tracker-ps-visio-

./: README.md  pyproject.toml
code/: ObjectTracker.py  VideoProcessor.py  execute_video.py  main.py
src-gen/: 3.avi
tests/: test_pytest.py
