[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["mauricio almeida <galmeidamauricio12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
torch = "^2.1.1"
torchvision = "^0.16.1"
matplotlib = "^3.8.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
